Show precipitation type in !w and !wf